# industrial_anodet_mlops

./: .gitignore  .gitmodules  pyproject.toml  readme.md
azure_components/: storage_account_presentation.html  workspace_presentation.html
pipelines/: sync2github.yml
pipelines/infra/: azure-ml-bootstrap.yml
src/: fastapi_app_np.py  train.py
src/AnomaVision/: .gitignore  README.md  app.py  detect.py  eval.py  export.py  padim_example.ipynb  pyproject.toml  train.py
src/AnomaVision/anodet/: feature_extraction.py  mahalanobis.py  padim.py
src/AnomaVision/notebooks/: padim_example.ipynb
src/AnomaVision/pipelines/: sync2github.yml
